--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -7,12 +7,15 @@ author:
 date: "`r Sys.Date()`"
 output: 
     rmarkdown::html_vignette:
-        toc_float:  true
+        toc:  true
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 bibliography: bootLong.bib
+params:
+  lC1: 2
+  lC2: 3
 ---
 
 Microbiome data consist of the frequency of higher resolution amplicon sequence variants (ASVs) \citep{CMRHJH2016} in each biological sample, clinical and demographic information about biological samples, phylogenetic tree, taxonomy table. Our `bootLong` package requires (phyloseq)[https://joey711.github.io/phyloseq/] for the entire workflow.
@@ -73,6 +76,16 @@ Set the computational resources: we need to specify the number of cores for subs
 ncores = as.integer(Sys.getenv("SLURM_NTASKS"))
 if(is.na(ncores)) ncores <- parallel::detectCores()
 ncores
+
+setting_name <- "Example"
+```
+
+
+```{r read_arg}
+lC1 <- params$lC1
+lC1
+lC2 <- params$lC2
+lC2
 ```
 
 ##  Load the phyloseq
@@ -143,7 +156,12 @@ threshold <- .1
 keep_asv <- apply(otu_table(ps), 1, function(x){
     sum(x > 0)
     }) > threshold*nsamples(ps)
+
 ps <- prune_taxa(keep_asv, ps)
+
+### Better to save the ps after all filtering
+# fileN <- paste0("ps", setting_name, ".rds")
+# saveRDS(ps, fileN)
 ```
 
 ##  Exploratory analysis
@@ -307,54 +325,79 @@ grid.arrange(arrangeGrob(grobs = plist, nrow = 2, widths = c(3, 3, 3)),
              widths=c(10, 2))
 ```
 
-We observe that the correlogram tends to be sufficiently zero at lag 3 for almost all the ASVs. Therefore, the initial block size is 4.
+We observe that the correlogram tends to be sufficiently zero at lag-4 for almost all the ASVs. Therefore, the initial block size is 5.
 
+All other exploratory tools suggest an inital block size of 5.
 
-
-```{r include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, fig.width = 7.5, fig.height = 5.5, eval = FALSE)
-```
-
-We cannot get a clear idea about inital block size because subject variability dominates variogram fit.
-
-All other exploratory tools suggest an inital block size of 4.
-
-We will choose 60\% of repeated observations for the subsampling because we can compute mean squared error of two-sided probability over FIVE subsamples (because there are 10 repeated observations from each subject). 
+Now we have chosen the initial parameters or the subsampling method. $\omega = .6$ and $l_{I} =5$. 
 
 #   The block bootstrap method
 
-First, we identify the opitmal block size for the subsample. We use the initial block size 4 ($l_{I} =4$) and subsample percentage 60\% ($\omega = .6$) to identify the opitmal block size. 
+First, we identify the opitmal block size for the subsample. We use the initial block size 5 ($l_{I} = 5$) and subsampling percentage 60\% ($\omega = .6$) to identify the opitmal block size. 
 
 ## Subsampling
 
-```{r message=FALSE,warning=FALSE}
-R <- 5
-RR <- 4
+We can run this code parallel for each block sizes and setting lC1 = lC2 and save the results with the block size (lC1) used.
+
+```{r eval=FALSE}
+fileN <- paste0("ps", setting_name, ".rds")
+ps <- readRDS(fileN)
+
+R <- 100
+RR <- 50
 main_factor <- "Group"
 time_var <- "Time"
 subjectID_var = "SubjectID"
 sampleID_var = "SampleID"
-lI <- 4
+lI <- 5
 omega <- .6
 
 system.time(
-    mse.results <- bootLongSubsampling(ps = ps, main_factor = main_factor, time_var = time_var, subjectID_var = subjectID_var, sampleID_var = sampleID_var, lI = lI, R = R, RR = RR, omega = omega, lC1 = 1, lC2 = NULL, ncores = ncores)
+    mse.results <- bootLongSubsampling(ps = ps, 
+        main_factor = main_factor, 
+        time_var = time_var, 
+        subjectID_var = subjectID_var, 
+        sampleID_var = sampleID_var, 
+        lI = lI, 
+        R = R, 
+        RR = RR, 
+        omega = omega, 
+        lC1 = lC1, lC2 = lC2, 
+        ncores = ncores)
 )
 
-
-#saveRDS(mse.results,"./MSE.rds")
+fileN <- paste0("MSE_", setting_name, "_lC1", lC1,".rds")
+saveRDS(mse.results, fileN)
 ```
 
 ###   Inspect MSE plot
 
-Second, we identify the optimal block size for the original data using the formula.
+We combine the results for all the possible $lC1$. In this example, $lC1 = 2, 3, 4$
+
+```{r eval=FALSE}
+MSE.all <- list()
+for(lC1 in 2:4){
+  filename <- paste0("MSE_",setting_name,"_lC1", lC1,".rds")
+  MSE.all[(lC1-1)] <- readRDS(filename)
+}
+
+fileN <- paste0("MSE_",setting_name,".rds")
+saveRDS(MSE.all, fileN)
+```
+
+1) Find the optimal block size for the subsample of 60\% (l_{\omega}) using MSE plot. 
+
+2) Find the optimal block size for the original data using the formula.
 
 $$l_{o} = \left(\frac{1}{\omega}\right)^{1/5}l_{\omega}$$.
 
 
-```{r message=FALSE,warning=FALSE}
+```{r eval=FALSE}
+lC1 <- 2
 omega <- .6
-#mse_results <- readRDS("./MSE.rds")
+fileN <- paste0("MSE_",setting_name,".rds")
+mse.results <- readRDS(fileN)
+
 blks <- length(mse.results)
 mse <- list()
 
@@ -362,45 +405,52 @@ for(i in 1:blks){
     mse[[i]] <- mse.results[[i]]$MSE_i
     }
 
-mse.avg <- lapply(mse,function(x){mean(x,na.rm=T)})
-mse.sum <- lapply(mse,function(x){sum(x,na.rm=T)})
+mse.avg <- lapply(mse,function(x){mean(x, na.rm=T)})
+mse.sum <- lapply(mse,function(x){sum(x, na.rm=T)})
 
 mse <- unlist(mse.sum)
-lblk <- seq(1,length(mse),by=1)
+lblk <- seq(lC1, (length(mse)+1), by=1)
 lblk.f <- as.factor(lblk)
-dfp <- data.frame(mse=mse,lblk=lblk.f)
+dfp <- data.frame(mse = mse,lblk = lblk.f)
 
-p.mse <- ggplot(dfp,aes(x=lblk,y=mse,group=1))+
+l.omega <- lblk[mse==min(mse)]
+l.omega
+l.opt <- round((100/(omega*100))^(1/5)*l.omega, digits = 0) 
+l.opt
+
+p.mse <- ggplot(dfp, aes(x=lblk, y=mse, group=1))+
     geom_point()+
     geom_line()+
     xlab("block size")+
     ylab("Mean squared error")+
-    ggtitle(paste("MSE for Simulation",omega*100,"%","subsample"))+theme(plot.title = element_text(hjust = 0.5))
+    ggtitle(paste0("MSE for  ", setting_name, " ", omega*100,"%"," subsample")) +
+  theme(plot.title = element_text(hjust = 0.5))
 
-ggsave("./mse_sim.eps", plot=p.mse, width = 8, height = 5.5)
+p.mse
 
-l.omega <- lblk[mse==min(mse)]
-l.omega
-l.opt <- ceiling((100/(omega*100))^(1/5)*l.omega) 
-l.opt
+fileN <- paste0("MSE_", setting_name, ".eps")
+ggsave(fileN, plot = p.mse, width = 8, height = 5.5)
 ```
 
 
-##   Run MBB with the optimal block size
+##   Run the block bootstrap method with the optimal block size $l_{o}$
 
 Finally, we run the block bootstrap method with the optimal block size for differential abundance analysis.
 
 
-```{r message=FALSE, warning=FALSE}
-R <- 5
-RR <- 4
+```{r eval=FALSE}
+R <- 200
+RR <- 50
 main_factor <- "Group"
 time_var <- "Time"
 subjectID_var = "SubjectID"
 sampleID_var = "SampleID"
 
+sample_data(ps)$Group <- factor(sample_data(ps)$Group)
+sample_data(ps)$Group <- relevel(sample_data(ps)$Group, ref = "Control")
+
 system.time(
-    boot_res <- bootLongMethod(ps, 
+    MBB.all <- bootLongMethod(ps, 
         main_factor = main_factor, 
         time_var = time_var,   
         sampleID_var = sampleID_var,
@@ -410,64 +460,118 @@ system.time(
         RR = RR)
     )
 
-#saveRDS(boot_res,"./MBB.rds")
+fileN <- paste0("MBB_",setting_name,".rds")
+saveRDS(MBB.all, fileN)
 ```
 
 ###   Inspect the MBB results
 
 We can make a summary of differential abundance ASV.
 
-```{r message=FALSE,warning=FALSE, eval=FALSE}
-boot_res <- readRDS("./MBB.rds")
+```{r eval=FALSE}
+fileN <- paste0("ps", setting_name, ".rds")
+ps <- readRDS(fileN)
+
 FDR <- .05
 taxalevel <- "Genus"
-out <- boot_res[[1]] 
 
-#   bootstrap values
-T.star_obs <- boot_res[[5]] 
+fileN <- paste0("MBB_",setting_name,".rds")
+boot.res.all <- readRDS(fileN) # list("summary", "beta.hat", "beta.hat.star", "beta.hat.star.star", "T.obs")
 
-#  filter by FDR
-out <- dplyr::filter(out,pvalue.adj <= FDR)
-   
-#   replace ASV by taxalevel
-taxaName <- as.character(tax_table(ps)[as.character(out$ASV),taxalevel])
+summ <- boot.res.all$summary
 
-#   if you want to append Species names to Genus taxalevel
-specName <- as.character(tax_table(ps)[as.character(out$ASV),"Species"])
-tog <- character()
+### add strain number to interested taxonomy same as in EDA 
+tax_table(ps)[, taxalevel] <- paste0(tax_table(ps)[, taxalevel],"_st_",seq(1, ntaxa(ps)))
 
-for(i in 1:length(taxaName)){
-    if(!is.na(specName[i])){
-    tog[i] <- paste(taxaName[i],specName[i])
-    }else{
-        tog[i] <- taxaName[i]
-    }
-}
+### if we change FDR, wee need to adjust the confidence interval
+T.stars.and.obs <- boot.res.all$beta.hat.star  
 
+lcl <- apply(T.stars.and.obs, 1, FUN=function(x){
+  quantile(x, probs=FDR/2, na.rm=TRUE)
+  })
+ucl <- apply(T.stars.and.obs, 1, FUN=function(x){
+  quantile(x, probs=(1-FDR/2), na.rm=TRUE)
+  })
 
-#   to remove taxa with no taxalevel name
-ind.na <- which(is.na(tog))
+summ$lcl <- lcl
+summ$ucl <- ucl
 
-#   to add sequence variants
-taxaN <- paste("SV",seq(1,length(out$ASV)),sep="")
-tn <- paste(tog,taxaN,sep=".")
+summ.filt.FDR <- dplyr::filter(summ, pvalue.adj <= FDR)
+summ.filt.FDR <- dplyr::select(summ.filt.FDR, one_of("ASV","stat","pvalue.adj","lcl","ucl"))
+summ.filt.FDR <- dplyr::filter(summ.filt.FDR, !is.na(pvalue.adj))
+summ.filt.FDR <- dplyr::arrange(summ.filt.FDR, desc(stat))
 
-out$ASV <- tn #taxalevel name and variant number
-#out$ASV <- taxaName    #   only taxalevel names
-#out$ASV <- tog #   taxalevel and Species name
-#out <- out[-ind.na,]
+### To save the results 
+summ.filt.FDR$stat <- round(summ.filt.FDR$stat, digits = 2)
+summ.filt.FDR$pvalue.adj <- round(summ.filt.FDR$pvalue.adj, digits = 4)
+summ.filt.FDR$pvalue.adj[which(summ.filt.FDR$pvalue.adj==0)] <- "<.0001"
+summ.filt.FDR$lcl <- round(summ.filt.FDR$lcl, digits = 2)
+summ.filt.FDR$ucl <- round(summ.filt.FDR$ucl, digits = 2)
 
-#   arrange by observed lfc
-out <- dplyr::arrange(out,desc(stat))
-#   dropped observed values of T
-out <- out[,-6]
+df.mbb <- data.frame(Taxa = summ.filt.FDR$ASV, betahat = summ.filt.FDR$stat, lcl = summ.filt.FDR$lcl, ucl = summ.filt.FDR$ucl, p.adj = summ.filt.FDR$pvalue.adj)
 
-out <- dplyr::filter(out,!is.na(pvalue.adj))
+df.mbb.write <- df.mbb
+df.mbb.write$Taxa <- tax_table(ps)[as.character(df.mbb.write$Taxa), taxalevel] %>% as.character
 
-#out <- filter(out,abs(stat)>1)
+####if you would like to avoid completely the ASV with strain number only.
 
-#   write the results table in latex
+# is.it.st <- lapply(df.mbb.write$Taxa, function(x){(strsplit(x, "_") %>% unlist)[1]}) %>% unlist
+# is.it.ind <- which(is.it.st == "st")
+# df.mbb.write <- df.mbb.write[-is.it.ind, ]
+
 library(xtable)
-print(xtable(out, type = "latex",digits = 3), file = "./boot_sim.tex")
+fileN <- paste0("MBB_",setting_name,".tex")
+print(xtable(df.mbb.write, type = "latex", digits = c(0,0,2,2,2,4)), file = fileN)
 ```
 
+### Plot significant ASVs
+
+```{r eval=FALSE}
+####if you would like to avoid completely the ASV with strain number only.
+#df.mbb <- df.mbb[-is.it.ind, ]
+#
+df.mbb <- dplyr::filter(df.mbb, abs(beta) > 1)
+ps.tr <- psTransform(ps, main_factor = "Group")[[1]] 
+
+taxaName <-  tax_table(ps.tr)[, taxalevel] %>% as.character
+ind <- which(taxa_names(ps) %in% as.character(df.mbb$Taxa))
+tax.plot <- taxa_names(ps.tr)[ind]
+
+
+otu.df <- otu_table(ps.tr) %>% t %>% data.frame
+samdf <-  sample_data(ps.tr) %>% data.frame
+otu.df <- bind_cols(otu.df, samdf)
+colnames(otu.df)[1:ntaxa(ps.tr)] <- taxa_names(ps.tr)
+
+otu.df.l <- gather(otu.df, key=taxa, value=abund, 1:ntaxa(ps.tr))
+otu.df.l$taxa <- otu.df.l$taxa %>% factor
+otu.df.l$Time <- otu.df.l$Time %>% factor
+
+otu.df.l <- filter(otu.df.l,taxa %in% tax.plot)
+otu.df.l$taxa <- droplevels(otu.df.l$taxa)
+
+txname <- taxaName[ind]
+
+match.tax.name <- data.frame(taxa = tax.plot, nam = txname)
+rownames(match.tax.name) <- as.character(match.tax.name$taxa)
+repl.tax.n <- match.tax.name[levels(otu.df.l$taxa),"nam"]
+
+otu.df.l$taxa <- factor(otu.df.l$taxa,labels  = as.character(repl.tax.n))
+
+otu.df.l$Time <- as.numeric(otu.df.l$Time)
+
+p <- ggplot(otu.df.l)+
+    geom_line(aes(x = Time, y = abund, linetype = Group, col = SubjectID, group = SubjectID))+
+    facet_wrap(~taxa,scales = "fixed")+
+    ylab("asinh")+
+  xlab("Gestational Week") + 
+  ggtitle(paste0("Differentially Abundant Taxa (MBB) in ", setting_name)) +
+    theme(strip.text.x = element_text(size = 10, face="italic", margin = margin(.1, 0, .05, 0, "cm")), axis.text=element_text(size=8, face = "bold"), plot.title = element_text(hjust = 0.5)) + scale_color_discrete(guide = FALSE) +
+  scale_linetype_discrete(name  ="",breaks=c("Control", "Case"),labels=c("Control", "Case")) +
+  stat_summary(aes(x = Time,y = abund, linetype= Group),fun.y = mean, geom = "line")
+
+p
+
+fileN <- paste0("Inspect_diff_abun_", setting_name, ".eps")
+ggsave(fileN, plot=p, width = 12, height = 8)
+```
