--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -67,8 +67,8 @@ library(magrittr)
 library(joineR)
 library(DESeq2)
 library(grid)
-#library(bootLong)
-devtools::load_all(".")
+library(bootLong)
+#devtools::load_all(".")
 ```
 
 Set the computational resources: we need to specify the number of cores for subsampling method and block bootstrap method. 
